<resources>
    <string name="app_name">易飞学堂</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="follow_weixin">请关注我们的微信公众号</string>
    <string name="account">帐号</string>
    <string name="login_account_hint">手机号/邮箱</string>
    <string name="register_account_hint">手机号或者邮箱</string>
    <string name="password">密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="register_password">6-16位区分大小写密码</string>
    <string name="register_password_confirm">重复输入密码</string>
    <string name="action_sign_in">登&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;录</string>
    <string name="action_register">立&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;即&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;注&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;册</string>
    <string name="action_go_register">没有帐号？立即注册</string>
    <string name="action_go_login">已有帐号？立即登录</string>
    <string name="title_activity_login">易飞学堂</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_information">InformationActivity</string>

    <string name="real_name">真实姓名</string>
    <string name="city">城市</string>
    <string name="school">学校</string>
    <string name="grade">年级</string>
    <string name="action_finish_register">完&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;成&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;注&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;册</string>
    <string name="title_activity_management">ManagementActivity</string>

    <string name="action_refresh_course_list">更新课程列表</string>
    <string name="title_activity_list">ListActivity</string>

    <string name="action_exit_login">退出登录</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="title_activity_lesson">LessonActivity</string>
    <string name="description">Media Controls</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="subject">学科</string>
    <string name="status">状态</string>
    <string name="course_item_desc_prefix">课程简介：</string>
    <string name="course_item_teacher_prefix">主\n讲\n老\n师\n：\n</string>
    <string name="course_item_begin_action"><u>开始学习</u></string>
    <string name="login_password_hint">6-16位区分大小写密码</string>
    <string name="info_realname_hint">真实姓名</string>
    <string name="info_city_hint">城市</string>
    <string name="info_xiaoyuan_hint">学校</string>
    <string name="course_test_string">高一物理上学期同步复习（人教版）</string>
    <string name="last_time_learn">上次学习到</string>
    <string name="temp1">第三讲：图形的相似</string>
    <string name="continue_study">继续学习</string>
    <string name="course_desc">课程简介</string>
    <string name="temp2">这门课非常有意思，非常非常地有意思，简直太棒了。超棒，极好，赶紧开始吧，再不开始就晚了，考不上大学了。简介还不够长，怎么办呢，怎么办呢，赶紧想办法啊，快快想办法，加油加油！！再多些几个字，再来一首，啦啦啦，啦啦啦，我是卖报的小画家。</string>
    <string name="temp3">主讲教师：张老三</string>
    <string name="temp4">正在进行</string>
    <string name="temp5">还未完成</string>

    <string name="lesson_number">第#讲：</string>
    <string name="video_list_knowledge">知识点讲解</string>
    <string name="video_list_example">例题讲解</string>
    <string name="video_list_episode">知识片段</string>
    <string name="video_list_title">本讲索引列表</string>
    <string name="begin_play">开始播放：</string>
    <string name="old_example_tip">请完成讲义上第v1页的v2，建议v3分钟内完成</string>
    <string name="example_tip">请完成讲义上的v1，建议v2分钟内完成</string>
    <string name="video_title">正在播放：v1</string>
    <string name="example_question_dialog_text_1">完成后请点击</string>
    <string name="example_question_dialog_text_2">继续</string>
    <string name="here">这&#160;里</string>
    <string name="click">点击</string>
    <string name="check">查看《v1》。或者点击</string>
    <string name="index_list">本讲索引列表</string>
    <string name="skip">忽略</string>
    <string name="exercise_tip">你已看完本讲最后一段视频。</string>
    <string name="no_course_result">没有符合条件的课程</string>
    <string name="fetching_result">正在获取课程列表</string>
    <string name="fetching_lessons_result">正在获取本课程各讲列表</string>
    <string name="temp6">科目：数学</string>
    <string name="course_item_subject_prefix">科\n&#160;&#160;\n&#160;&#160;\n目\n：</string>
    <string name="math">数学</string>
    <string name="pyhsics">物理</string>
    <string name="chinese">语文</string>
    <string name="not_start">未开始</string>
    <string name="is_complete">已完成</string>
    <string name="ongoing">学习中</string>
    <string name="completed">已完成</string>
    <string name="not_completed">未完成</string>

    <string name="question_time_tip_short">建议v1分钟之内完成</string>
    <string name="question_time_tip">建议v1分钟之内完成，还有v2分钟时间</string>
    <string name="title_activity_pre_lesson">PreLesson</string>

</resources>
