<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/example_question_dialog_background">

    <TextView
        android:id="@+id/example_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_grey"
        android:layout_marginBottom="10dp"
        android:text="@string/example_tip" />

    <ImageView
        android:id="@+id/question_content_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/finish_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_grey"
            android:text="@string/example_question_dialog_text_1"/>

        <Button
            android:id="@+id/next_example_video"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/next_example_video_background"
            android:text="@string/here"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_grey"
            android:text="@string/example_question_dialog_text_2"/>
    </LinearLayout>

</LinearLayout>