<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="@dimen/title_bar_height"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/example_question_dialog_background"
        android:layout_marginTop="500dp"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_grey"
            android:text="@string/click"/>

        <Button
            android:id="@+id/episode_video_button"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/next_example_video_background"
            android:text="@string/here"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/check_episode_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_grey"
            android:text="@string/check"/>

        <Button
            android:id="@+id/skip_episode_video_button"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/next_example_video_background"
            android:text="@string/here"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_grey"
            android:text="@string/skip"/>
    </LinearLayout>
</LinearLayout>