<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:id="@+id/rootLayout"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.efei.student.tablet.account.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="0.7"
        android:orientation="horizontal"
        android:layout_height="0dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_account"
                    android:text="@string/account"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:width="30dp" />

                <EditText
                    android:id="@+id/account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_account_hint"
                    android:text="13987654321" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:text="@string/password"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:width="30dp" />

                <EditText android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="111111" />

            </LinearLayout>

            <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_go_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_go_register"
                android:textColor="#ff87adee"
                android:textSize="13dp" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="0.3"
        android:layout_height="0dp">


        <TextView android:text="@string/follow_weixin" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>
